--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -1,51 +1,5 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+/* Meyer reset added via CDN. */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
 
 /* Set every element's box-sizing to border-box */
 * {
@@ -62,5 +16,325 @@ h1, h2, h3, h4, h5 {
     letter-spacing: 1px;
     margin-bottom: 15px;
 }
+/* Your code starts here! */
 
-/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+@media only screen and (max-width: 400px){ /* Mobile screens */
+
+body {
+  height: 100%;
+}
+.logo {
+  position: absolute;
+  top: 10px;
+  width: 100%;
+  height: 36px;
+  background: url(../img/logo.png) no-repeat center;
+  background-color: #bde0ff;
+  background-size: contain;
+}
+.logo:active {
+  background: url(../img/logo-hover.png) no-repeat center;
+}
+.nav-bar {
+  background-color: #bde0ff;
+}
+nav {
+  padding-top: 56px;
+  width: 100%;
+}
+.nav-bar a {
+  display: inline-block;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 300;
+  color: gray;
+  text-decoration: none;
+  width: 50%;
+  text-align: center;
+  border-bottom: 1px solid black;
+  padding-top: 1.5vh;
+  height: 6vh;
+}
+nav a:first-child, nav a:nth-child(2) {
+  border-top: 1px solid black;
+}
+nav a:nth-child(odd){
+  border-right: 1px solid black;
+}
+nav a:last-child, nav a:nth-child(5){
+  border-bottom: 4px solid black;
+}
+.intro div:first-child {
+  width: 100%;
+  height: 50%;
+  padding: 20px 0;
+  border-bottom: 1px solid black;
+  font-size: 3em;
+  text-align: center;
+}
+.intro button {
+  background: transparent;
+  font-family: 'Titillium Web', sans-serif;
+  color: gray;
+  border: 1px solid gray;
+}
+.header-img {
+  background: url(../img/header-img.png) no-repeat center;
+  background-size: contain;
+  background-origin: content-box;
+  width: 100%;
+  height: 209.25px;
+  padding: 20px 0;
+  border-bottom: 1px solid black;
+}
+hr {
+  display: none;
+}
+.subheading {
+  width: 100%;
+  text-align: center;
+  font-size: 1.4em;
+}
+.content div {
+  padding: 10px 5%;
+  border-bottom: 1px solid black;
+}
+.content:last-child div:first-child {
+  border-top: 1px solid black;
+}
+.accent-img {
+  width: 80%;
+  margin: 10px auto;
+  height: 182px;
+  background: url(../img/mid-page-accent.jpg) no-repeat 70% 0%;
+  background-origin: content-box;
+}
+footer {
+  margin: 10px 5%;
+}
+.copyright {
+  font-size: .8em;
+  margin-top: 20px;
+  text-align: center;
+}
+
+}
+
+@media only screen and (min-width: 401px) and (max-width: 960px){ /* Tablet screens */
+
+header {
+  height: 45%;
+}
+.logo {
+  position: absolute;
+  top: 10px;
+  width: 100%;
+  height: 36px;
+  background: url(../img/logo.png) no-repeat center;
+  background-size: contain;
+  background-color: #bde0ff;
+}
+.logo:active {
+  background: url(../img/logo-hover.png) no-repeat center;
+}
+nav {
+  padding-top: 56px;
+  padding-bottom: 10px;
+  border-bottom: 4px solid black;
+  background-color: #bde0ff;
+}
+nav a {
+  display: inline-block;
+  width: 16.66%;
+  width: calc(100%/6);
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 300;
+  color: gray;
+  text-decoration: none;
+}
+.intro {
+  height: 77%;
+}
+.intro div {
+  position: relative;
+  display: inline-block;
+  width: 50%;
+}
+.intro div:first-child {
+  height: 100%;
+  vertical-align: top;
+  text-align: center;
+  font-size: 2em;
+  }
+.intro div h1 {
+    position: absolute;
+    left: 50%;
+    top: 35%;
+    transform: translate(-50%,-50%);
+}
+.intro div button {
+  position: absolute;
+  left: 50%;
+  top: 65%;
+  transform: translate(-50%,-50%);
+  color: gray;
+  background: transparent;
+  border: 1px solid gray;
+  line-height: 2em;
+  font-size: .5em;
+  font-family: 'Titillium Web', sans-serif;
+}
+.header-img {
+  background: url(../img/header-img.png) no-repeat center;
+  background-size: contain;
+  background-origin: content-box;
+  height: 209.25px;
+  padding: 10px;
+}
+hr {
+  display: none;
+}
+.main {
+  border-top: 1px solid black;
+}
+.subheading {
+  width: 100%;
+  text-align: center;
+  font-size: 1.4em;
+}
+.content div {
+  padding: 10px 5%;
+  border-bottom: 1px solid black;
+}
+.content:last-child div:first-child {
+  border-top: 1px solid black;
+}
+.accent-img {
+  width: 80%;
+  margin: 10px auto;
+  height: 182px;
+  background: url(../img/mid-page-accent.jpg) no-repeat 70% 0%;
+  background-origin: content-box;
+}
+footer {
+  margin: 10px 5%;
+}
+.copyright {
+  font-size: .8em;
+  margin-top: 20px;
+  text-align: center;
+}
+
+}
+
+@media only screen and (min-width: 961px){ /* Desktop screens */
+
+header {
+  height: 60%;
+}
+.nav-bar {
+  z-index: 1;
+  background-color: #bde0ff;
+  position: fixed;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  top: 0;
+  left: 0;
+  height: 7%;
+  width: 100%;
+  border-bottom: 4px solid black;
+}
+.nav-bar nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 75%;
+  height: 50%;
+}
+.nav-bar a {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 300;
+  color: gray;
+  text-decoration: none;
+}
+.logo {
+  width: 183px;
+  height: 36px;
+  background: url(../img/logo.png);
+}
+.logo:hover {
+  background: url(../img/logo-hover.png);
+}
+.intro {
+  height: 93%;
+  margin-top: 7.65%;
+  padding-top: 50px;
+  display: flex;
+}
+
+.intro div {
+  text-align: center;
+  width: 50%;
+  height: 100%;
+  user-select: none;
+}
+.intro .header-img {
+  background: url(../img/header-img.png) no-repeat;
+  background-size: contain;
+}
+.intro div h1 {
+  font-size: 4.5em;
+}
+.intro button {
+  margin-top: 10px;
+  color: gray;
+  background: transparent;
+  border: 1px solid gray;
+  width: 23%;
+  line-height: 2em;
+  font-size: 1.2em;
+  font-family: 'Titillium Web', sans-serif;
+  cursor: pointer;
+}
+hr {
+  width: 80%;
+  margin-top: 50px;
+  margin-bottom: 30px;
+}
+.main {
+  position: relative;
+  margin: 0 10%;
+}
+.content {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.subheading {
+  position: relative;
+  font-size: 1.3em;
+}
+.subheading span {
+  position: absolute;
+  top: -7vh;
+}
+.accent-img {
+  background: url(../img/mid-page-accent.jpg) no-repeat center;
+  background-size: contain;
+  width: 100%;
+  height: 182px;
+  margin: 20px 0;
+}
+footer {
+  margin: 0 10%;
+}
+footer address {
+  margin: 20px 0;
+}
+.copyright {
+  text-align: center;
+  margin-bottom: 20px;
+}
+  
+}
