Flex and queries, tablet remains unfinished for services

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -37,13 +37,15 @@ body {
 }
 .nav-bar {
   background-color: #bde0ff;
+  width: 100%;
 }
 nav {
+  display: flex;
+  flex-flow: row wrap;
   padding-top: 56px;
   width: 100%;
 }
-.nav-bar a {
-  display: inline-block;
+.nav-bar nav a {
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
   color: gray;
@@ -137,16 +139,14 @@ header {
   background: url(../img/logo-hover.png) no-repeat center;
 }
 nav {
+  display: flex;
+  justify-content: space-around;
   padding-top: 56px;
   padding-bottom: 10px;
   border-bottom: 4px solid black;
   background-color: #bde0ff;
 }
 nav a {
-  display: inline-block;
-  width: 16.66%;
-  width: calc(100%/6);
-  text-align: center;
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
   color: gray;
@@ -154,29 +154,23 @@ nav a {
 }
 .intro {
   height: 77%;
+  display: flex;
 }
 .intro div {
   position: relative;
-  display: inline-block;
   width: 50%;
 }
 .intro div:first-child {
-  height: 100%;
-  vertical-align: top;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   text-align: center;
+  align-items: center;
+  height: 100%;
   font-size: 2em;
   }
-.intro div h1 {
-    position: absolute;
-    left: 50%;
-    top: 35%;
-    transform: translate(-50%,-50%);
-}
+
 .intro div button {
-  position: absolute;
-  left: 50%;
-  top: 65%;
-  transform: translate(-50%,-50%);
   color: gray;
   background: transparent;
   border: 1px solid gray;
@@ -189,7 +183,8 @@ nav a {
   background-size: contain;
   background-origin: content-box;
   height: 209.25px;
-  padding: 10px;
+  padding: 5px 10px;
+  padding-top: 5%;
 }
 hr {
   display: none;
