--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -39,11 +39,12 @@ body {
   background-color: #bde0ff;
 }
 nav {
+  display: flex;
+  flex-flow: row wrap;
   padding-top: 56px;
   width: 100%;
 }
-.nav-bar a {
-  display: inline-block;
+.nav-bar nav a {
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
   color: gray;
@@ -63,7 +64,70 @@ nav a:nth-child(odd){
 nav a:last-child, nav a:nth-child(5){
   border-bottom: 4px solid black;
 }
+.services-header-img {
+  width: 100%;
+  margin-bottom: 10px;
+}
+h2 {
+  font-size: 1.2em;
+}
+.services {
+  margin: 0 5%;
+  width: 90%;
+}
+.services h2 {
+  font-size: 1.5em;
+}
+.general-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.general-info section {
+  width: 90%;
+  border: 1px solid gray;
+  background-color: aliceblue;
+  padding: 10px 5px;
+  margin-bottom: 10px;
+}
+.general-info section:last-child {
+  margin-bottom: 0;
+}
+.general-info section a {
+  display: inline-block;
+  margin-top: 5px;
+  padding: 5px;
+  background: transparent;
+  font-family: 'Titillium Web', sans-serif;
+  color: gray;
+  border: 1px solid gray;
+  text-decoration: none;
+}
+.services-info-img {
+  width: 100%;
+}
 
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 90%;
+  margin: 0 5%;
+}
+footer p {
+  margin-bottom: 10px;
+}
+footer ul {
+  list-style-type: square;
+  list-style-position: inside;
+  margin-bottom: 10px;
+}
+.copyright {
+  margin: 10px 0;
+  text-align: center;
+  font-size: .8em;
+}
 }
 
 @media only screen and (min-width: 401px) and (max-width: 960px){ /* Tablet screens */
