--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -128,13 +128,11 @@ footer ul {
   text-align: center;
   font-size: .8em;
 }
+
 }
 
 @media only screen and (min-width: 401px) and (max-width: 960px){ /* Tablet screens */
 
-header {
-  height: 45%;
-}
 .logo {
   position: absolute;
   top: 10px;
@@ -148,22 +146,83 @@ header {
   background: url(../img/logo-hover.png) no-repeat center;
 }
 nav {
+  display: flex;
+  justify-content: space-around;
   padding-top: 56px;
   padding-bottom: 10px;
   border-bottom: 4px solid black;
   background-color: #bde0ff;
 }
 nav a {
-  display: inline-block;
-  width: 16.66%;
-  width: calc(100%/6);
-  text-align: center;
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
   color: gray;
   text-decoration: none;
 }
+.services-header-img {
+  width: 100%;
+  margin-bottom: 10px;
+}
+h2 {
+  font-size: 1.2em;
+}
+.services {
+  margin: 0 5%;
+  width: 90%;
+}
+.services h2 {
+  font-size: 1.5em;
+}
+.general-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.general-info section {
+  width: 90%;
+  border: 1px solid gray;
+  background-color: aliceblue;
+  padding: 10px 5px;
+  margin-bottom: 10px;
+}
+.general-info section:last-child {
+  margin-bottom: 0;
+}
+.general-info section a {
+  display: inline-block;
+  margin-top: 5px;
+  padding: 5px;
+  background: transparent;
+  font-family: 'Titillium Web', sans-serif;
+  color: gray;
+  border: 1px solid gray;
+  text-decoration: none;
+}
+.services-info-img {
+  width: 100%;
+}
 
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 90%;
+  margin: 0 5%;
+}
+footer p {
+  margin-bottom: 10px;
+}
+footer ul {
+  list-style-type: square;
+  list-style-position: inside;
+  margin-bottom: 10px;
+}
+.copyright {
+  margin: 10px 0;
+  text-align: center;
+  font-size: .8em;
+}
 }
 
 @media only screen and (min-width: 961px){ /* Desktop screens */
