--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -121,7 +121,7 @@ footer {
 
 }
 
-@media only screen and (min-width: 401px) and (max-width: 960px){ /* Tablet screens */
+@media only screen and (min-width: 401px) and (max-width: 960px) and (orientation: portrait){ /* Tablet screens */
 
 header {
   height: 45%;
@@ -185,6 +185,125 @@ nav a {
   height: 209.25px;
   padding: 5px 10px;
   padding-top: 5%;
+}
+hr {
+  display: none;
+}
+.main {
+  border-top: 1px solid black;
+}
+.subheading {
+  width: 100%;
+  text-align: center;
+  font-size: 1.4em;
+}
+.content div {
+  padding: 10px 5%;
+  border-bottom: 1px solid black;
+}
+.content:last-child div:first-child {
+  border-top: 1px solid black;
+}
+.accent-img {
+  width: 80%;
+  margin: 10px auto;
+  height: 182px;
+  background: url(../img/mid-page-accent.jpg) no-repeat 70% 0%;
+  background-origin: content-box;
+}
+footer {
+  margin: 10px 5%;
+}
+.copyright {
+  font-size: .8em;
+  margin-top: 20px;
+  text-align: center;
+}
+
+}
+
+@media only screen and (min-width: 401px) and (max-width: 960px) and (orientation: landscape){
+  body {
+  height: 100%;
+}
+header {
+  height: 80%;
+}
+.logo {
+  position: absolute;
+  top: 10px;
+  width: 100%;
+  height: 36px;
+  background: url(../img/logo.png) no-repeat center;
+  background-color: #bde0ff;
+  background-size: contain;
+}
+.logo:active {
+  background: url(../img/logo-hover.png) no-repeat center;
+}
+.nav-bar {
+  background-color: #bde0ff;
+  width: 100%;
+}
+nav {
+  display: flex;
+  flex-flow: row wrap;
+  padding-top: 56px;
+  width: 100%;
+}
+.nav-bar nav a {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 300;
+  color: gray;
+  text-decoration: none;
+  width: 50%;
+  text-align: center;
+  border-bottom: 1px solid black;
+  padding-top: 1.5vh;
+  height: 6vh;
+}
+nav a:first-child, nav a:nth-child(2) {
+  border-top: 1px solid black;
+}
+nav a:nth-child(odd){
+  border-right: 1px solid black;
+}
+nav a:last-child, nav a:nth-child(5){
+  border-bottom: 4px solid black;
+} 
+.intro {
+  height: 77%;
+  display: flex;
+}
+.intro div {
+  position: relative;
+  width: 50%;
+}
+.intro div:first-child {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  height: 80%;
+  font-size: 2em;
+  }
+
+.intro div button {
+  color: gray;
+  background: transparent;
+  border: 1px solid gray;
+  line-height: 2em;
+  font-size: .5em;
+  font-family: 'Titillium Web', sans-serif;
+}
+.header-img {
+  background: url(../img/header-img.png) no-repeat center;
+  background-size: contain;
+  background-origin: content-box;
+  height: 209.25px;
+  padding: 20px 10px;
+  padding-top: 1%;
 }
 hr {
   display: none;
