Fixing screen sizes

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -16,6 +16,10 @@ h1, h2, h3, h4, h5 {
     letter-spacing: 1px;
     margin-bottom: 15px;
 }
+
+.logo:active {
+  outline: none;
+}
 /* Your code starts here! */
 
 @media only screen and (max-width: 400px){ /* Mobile screens */
@@ -65,6 +69,9 @@ nav a:nth-child(odd){
 nav a:last-child, nav a:nth-child(5){
   border-bottom: 4px solid black;
 }
+.intro {
+  border-bottom: 1px solid black;
+}
 .intro div:first-child {
   width: 100%;
   height: 50%;
@@ -80,13 +87,10 @@ nav a:last-child, nav a:nth-child(5){
   border: 1px solid gray;
 }
 .header-img {
-  background: url(../img/header-img.png) no-repeat center;
-  background-size: contain;
-  background-origin: content-box;
-  width: 100%;
-  height: 209.25px;
-  padding: 20px 0;
-  border-bottom: 1px solid black;
+  display: block;
+  width: 75%;
+  margin: 0 auto;
+  padding: 10px 0;
 }
 hr {
   display: none;
@@ -121,11 +125,7 @@ footer {
 
 }
 
-@media only screen and (min-width: 401px) and (max-width: 960px) and (orientation: portrait){ /* Tablet screens */
-
-header {
-  height: 45%;
-}
+@media only screen and (min-width: 401px) and (max-width: 960px){ /* Tablet screens */
 .logo {
   position: absolute;
   top: 10px;
@@ -152,13 +152,22 @@ nav a {
   color: gray;
   text-decoration: none;
 }
+.header-img {
+  width: 30%;
+  padding: 10px 0;
+}
 .intro {
-  height: 77%;
+  height: 74.5%;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .intro div {
   position: relative;
   width: 50%;
+}
+.intro h1 {
+  font-size: 6vw;
 }
 .intro div:first-child {
   display: flex;
@@ -167,7 +176,6 @@ nav a {
   text-align: center;
   align-items: center;
   height: 100%;
-  font-size: 2em;
   }
 
 .intro div button {
@@ -175,135 +183,11 @@ nav a {
   background: transparent;
   border: 1px solid gray;
   line-height: 2em;
-  font-size: .5em;
+  font-size: 1em;
   font-family: 'Titillium Web', sans-serif;
 }
 .header-img {
-  background: url(../img/header-img.png) no-repeat center;
-  background-size: contain;
-  background-origin: content-box;
-  height: 209.25px;
-  padding: 5px 10px;
-  padding-top: 5%;
-}
-hr {
-  display: none;
-}
-.main {
-  border-top: 1px solid black;
-}
-.subheading {
-  width: 100%;
-  text-align: center;
-  font-size: 1.4em;
-}
-.content div {
-  padding: 10px 5%;
-  border-bottom: 1px solid black;
-}
-.content:last-child div:first-child {
-  border-top: 1px solid black;
-}
-.accent-img {
-  width: 80%;
-  margin: 10px auto;
-  height: 182px;
-  background: url(../img/mid-page-accent.jpg) no-repeat 70% 0%;
-  background-origin: content-box;
-}
-footer {
-  margin: 10px 5%;
-}
-.copyright {
-  font-size: .8em;
-  margin-top: 20px;
-  text-align: center;
-}
-
-}
-
-@media only screen and (min-width: 401px) and (max-width: 960px) and (orientation: landscape){
-  body {
-  height: 100%;
-}
-header {
   height: 80%;
-}
-.logo {
-  position: absolute;
-  top: 10px;
-  width: 100%;
-  height: 36px;
-  background: url(../img/logo.png) no-repeat center;
-  background-color: #bde0ff;
-  background-size: contain;
-}
-.logo:active {
-  background: url(../img/logo-hover.png) no-repeat center;
-}
-.nav-bar {
-  background-color: #bde0ff;
-  width: 100%;
-}
-nav {
-  display: flex;
-  flex-flow: row wrap;
-  padding-top: 56px;
-  width: 100%;
-}
-.nav-bar nav a {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 300;
-  color: gray;
-  text-decoration: none;
-  width: 50%;
-  text-align: center;
-  border-bottom: 1px solid black;
-  padding-top: 1.5vh;
-  height: 6vh;
-}
-nav a:first-child, nav a:nth-child(2) {
-  border-top: 1px solid black;
-}
-nav a:nth-child(odd){
-  border-right: 1px solid black;
-}
-nav a:last-child, nav a:nth-child(5){
-  border-bottom: 4px solid black;
-} 
-.intro {
-  height: 77%;
-  display: flex;
-}
-.intro div {
-  position: relative;
-  width: 50%;
-}
-.intro div:first-child {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
-  height: 80%;
-  font-size: 2em;
-  }
-
-.intro div button {
-  color: gray;
-  background: transparent;
-  border: 1px solid gray;
-  line-height: 2em;
-  font-size: .5em;
-  font-family: 'Titillium Web', sans-serif;
-}
-.header-img {
-  background: url(../img/header-img.png) no-repeat center;
-  background-size: contain;
-  background-origin: content-box;
-  height: 209.25px;
-  padding: 20px 10px;
-  padding-top: 1%;
 }
 hr {
   display: none;
@@ -386,16 +270,14 @@ header {
   padding-top: 50px;
   display: flex;
 }
-
 .intro div {
   text-align: center;
   width: 50%;
   height: 100%;
   user-select: none;
 }
-.intro .header-img {
-  background: url(../img/header-img.png) no-repeat;
-  background-size: contain;
+.header-img {
+  height: 100%;
 }
 .intro div h1 {
   font-size: 4.5em;
