--- a/great-idea/css/about.css
+++ b/great-idea/css/about.css
@@ -64,7 +64,66 @@ h1, h2, h3, h4, h5 {
     nav a:last-child, nav a:nth-child(5){
       border-bottom: 4px solid black;
     }
-
+    .intro {
+        margin-top: 36px;
+        display: flex;
+        flex-direction: column;
+    }
+    .quote {
+        text-align: center;
+        font-size: 6vw;
+        padding: 10px;
+        width: 100%;
+        border-bottom: 1px solid black;
+    }
+    .main {
+        display: flex;
+        flex-direction: column;
+        margin-top: 20px;
+    }
+    .main div {
+        width: 90%;
+        margin: 0 auto;
+    }
+    .main ul {
+        margin-top: 10px;
+        list-style-type: square;
+        list-style-position: inside;
+    }
+    .intro img {
+        width: 90%;
+        margin: 20px auto;
+    }
+    .details {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        border-bottom: 1px solid black;
+    }
+    .details div {
+        margin-bottom: 20px;
+        width: 88%;
+        padding: 1%;
+        background-color: aliceblue;
+        border: 1px solid black;
+        border-radius: 5px;
+    }
+    footer {
+        position: relative;
+        margin: 0 auto;
+        margin-top: 20px;
+        width: 90%;
+    }
+    footer img {
+        width: 100%;
+        margin-top: 20px;
+        padding-bottom: 1em;
+    }
+    .copyright {
+        display: flex;
+        justify-content: center;
+        font-size: .8em;
+    }
 }
 
 @media only screen and (min-width: 401px) and (max-width: 960px){ /* Tablet screens */
@@ -93,6 +152,64 @@ h1, h2, h3, h4, h5 {
       font-weight: 300;
       color: gray;
       text-decoration: none;
+    }
+    .intro {
+        width: 90%;
+        margin: 20px auto;
+        display: flex;
+        flex-direction: column;
+    }
+    .quote {
+        text-align: center;
+        font-size: 6vw;
+        width: 75%;
+        margin: 0 auto;
+    }
+    .main {
+        display: flex;
+        align-items: baseline;
+        justify-content: space-between;
+    }
+    .main div {
+        width: 45%;
+        align-self: center;
+    }
+    .main ul {
+        margin-top: 10px;
+        list-style-type: square;
+        list-style-position: inside;
+    }
+    .intro img {
+        width: 45%;
+    }
+    .details {
+        width: 90%;
+        padding-top: 20px;
+        margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .details div {
+        width: 45%;
+        margin-bottom: 20px;
+        border: 1px solid black;
+        background-color: aliceblue;
+        padding: 5px;
+        border-radius: 5px;
+    }
+    footer {
+        width: 90%;
+        margin: 0 auto;
+    }
+    footer img {
+        width: 100%;
+        margin: 10px 0;
+    }
+    .copyright {
+        display: flex;
+        justify-content: center;
+        font-size: .9em;
     }
 
 }
@@ -140,7 +257,7 @@ h1, h2, h3, h4, h5 {
         height: 60%;
         width: 80%;
     }
-    .overview {
+    .quote {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -157,7 +274,6 @@ h1, h2, h3, h4, h5 {
         height: 75%;
         width: 60%;
         align-self: center;
-        border-left: 1px solid black;
     }
     .main div {
         display: flex;
@@ -166,6 +282,7 @@ h1, h2, h3, h4, h5 {
         flex-grow: 1;
         height: 100%;
         width: 50%;
+        border-left: 1px solid black;
     }
     .main p {
         margin-bottom: 10px;
@@ -174,6 +291,7 @@ h1, h2, h3, h4, h5 {
     .main ul {
         list-style-type: square;
         list-style-position: inside;
+        width: 90%;
     }
     .main img {
         height: 100%;
